@@ -1,3 +1,8 @@
+2007-08-20  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* src/proj_api.h: include void in arg list for prototypes with no
+	arguments to avoid warning about not being a function declaration.
+
 2007-07-06  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* src/pj_open_lib.c: Per suggestion from Janne, ensure
